--- a/package.json
+++ b/package.json
@@ -12,12 +12,11 @@
     "preview": "vite preview",
     "test:unit": "vitest",
     "lint": "eslint . --fix --cache",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "animate.css": "^4.1.1",
     "pinia": "^3.0.3",
-    "pinia-plugin-persistedstate": "^4.7.1",
     "vant": "^4.9.21",
     "vue": "^3.5.22",
     "vue-router": "^4.6.3"
@@ -28,12 +27,14 @@
     "@vitest/eslint-plugin": "^1.3.23",
     "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/test-utils": "^2.4.6",
-    "autoprefixer": "^10.4.22",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9.37.0",
     "eslint-plugin-vue": "~10.5.0",
+    "gh-pages": "^6.1.1",
     "globals": "^16.4.0",
     "jsdom": "^27.0.1",
-    "postcss": "^8.5.6",
+    "pinia-plugin-persistedstate": "^3.2.3",
+    "postcss": "^8.4.49",
     "postcss-px-to-viewport": "^1.1.1",
     "prettier": "3.6.2",
     "sass-embedded": "^1.93.3",
